sys/geom/vinum/geom_vinum_plex.c
@@ -173,7 +173,7 @@ gv_plex_offset(struct gv_plex *p, off_t boff, off_t bcount, off_t *real_off,
 			return (GV_ERR_ISBUSY);
 		*sdno = stripeno % sdcount;
 
-		KASSERT(sdno >= 0, ("gv_plex_offset: sdno < 0"));
+		KASSERT(*sdno >= 0, ("gv_plex_offset: sdno < 0"));
 		stripestart = (stripeno / sdcount) *
 		    p->stripesize;
 		KASSERT(stripestart >= 0, ("gv_plex_offset: stripestart < 0"));
